packages/svelte/tests/validator/samples/svelte-head-attributes/input.svelte
<svelte:head x></svelte:head>