packages/svelte/tests/compiler-errors/samples/options-children/main.svelte
<svelte:options>contents</svelte:options>
